# FastAPI_hw12

./: .gitignore  chat_id.txt  env.example  main.py  mock_db_invoices.json  pyproject.toml  readme.md  requirements.txt
migrations/: env.py
migrations/versions/: 1bf2213f38c5_init.py  3318ef2bf36f_udate_table_users.py  3e4bd230f29f_init.py  8ca478274a94_add_table_users.py
src/conf/: config.py  oauth_config.py
src/database/: db.py
src/entity/: models.py
src/handlers/: oauth_handler.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  payment.py
src/schemas/: contact.py  user.py  web_shop.py
src/services/: auth.py  mono_service.py  tg_service.py
src/templates/: base.html  login.html  signup.html
